# ComfyUI_SaveImageWithMetaDataUniversal

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .tracking  CHANGELOG.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DESIGN_SCANNER_RULES_REWORK.md  DEV_WORKFLOW_TESTING.md  MIGRATIONS.md  PR_BODY.md  PR_DRAFT_1.2.0.md  README.jp.md  README.md  RELEASE_NOTES_1.2.0.md  VALIDATE_METADATA_FIXES.md  VALIDATION_FIXES_SUMMARY.md  WORKFLOW_METAFIELDS_ANALYSIS.md  WORKFLOW_TEST_SUGGESTIONS.md  __init__.py  bench_merge_performance.py  debug_dots.py  demo_validation_fixes.py  multi_sampler_plan.md  pyproject.toml  read_exif.py  requirements-test.txt  requirements.txt  ruff.toml  run_dev_workflows.py  test_widget.html  validate_metadata.py
.github/: copilot-instructions.md  copilot.instructions.md
.github/instructions/: comfy.instructions.md  copilot.instructions.md  markdown.instructions.md  python.instructions.md
.github/workflows/: ci.yml  publish_action.yml  unimeta-ci.yml
_test_outputs/: merge_bench.json
dev_test_workflows/: 1-scan-and-save-custom-metadata-rules.json  USO-Style-and-or-Subject-transfer-turbo.json  USO-Style-and-or-Subject-transfer.json  efficiency-nodes.json  extra_metadata.json  extra_metadata_clip_skip.json  filename_format.json  filename_format_denoise.json  flux-CR-LoRA-stack-ClownsharK.json  flux-LoRA-Manager.json  flux-PC-LoRA-inline-Inspire-KSampler.json  flux-civsampler-GCFG-lora-summary-batch3.json  flux-dual-clip.json  flux-turbo.json  flux.json  large-workflow-jpeg-16kb.json  large-workflow-jpeg-32kb.json  large-workflow-jpeg-4kb.json  large-workflow-jpeg-60kb.json  large-workflow-jpeg-8kb.json  large-workflow-jpeg.json  large-workflow-png.json  large-workflow-webp.json  lora_embedding_vae.json  lora_embedding_vae_upscale_dual_sampler.json  qwen_image_edit_2509.json  wan21_text_to_image.json
docs/: FUTURE_AND_PROTOTYPES.md  HIGH_PRIORITY_TASKS.md  JPEG_METADATA_FALLBACK.md  MIGRATIONS.md  V3_SCHEMA_MIGRATION.md  WAN22_SUPPORT.md  WORKFLOW_COMPRESSION_DESIGN.md
docs/releases/: RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.2.md  v1.3.0_REVIEW_SUMMARY.md
example_workflows/: USO-Style-and-or-Subject-transfer.json  efficiency-nodes.json  extra_metadata.json  filename_format.json  flux-LoRA-Manager.json  flux.json  flux_dev_checkpoint.json  image_qwen_image_edit_2509.json  lora_embedding_vae.json  lora_embedding_vae_subgraph.json  nunchaku-flux-kontext-turbo-lora.json  nunchaku-qwen-image-edit.json  refresh-rules.json  scan-and-save-custom-metadata-rules-simple.json  scan-and-save-custom-metadata-rules.json  sd3.json  wan21_text_to_image.json
examples/: flux2.json  flux_dev_checkpoint.json  lora_embedding_vae.json  scan-and-save-custom-metadata-rules.json
saveimage_unimeta/: __init__.py  capture.py  hook.py  piexif_alias.py  trace.py  user_samplers_example.json  version.py
saveimage_unimeta/defs/: __init__.py  captures.py  combo.py  formatters.py  meta.py  samplers.py  selectors.py  validators.py
saveimage_unimeta/defs/ext/: ComfyUI-FluxSettingsNode.py  Miaoshouai-Tagger.py  PCLazyLoraLoader.py  XTNodes.py  __init__.py  easyuse_nodes.py  efficiency_nodes.py  generated_user_rules.py  generated_user_rules_examples.py  impact.py  lora_manager.py  rgthree.py  size_from_presets.py  wan_video_wrapper.py  zimagepowernodes.py
saveimage_unimeta/nodes/: __init__.py  extra_metadata.py  node.py  rules_save.py  rules_view.py  rules_writer.py  save_image.py  scanner.py  show_any.py  show_text.py  testing_stubs.py
saveimage_unimeta/user_rules/: user_captures.json  user_captures_examples.json  user_samplers.json  user_samplers_example.json
saveimage_unimeta/utils/: color.py  deserialize.py  embedding.py  hash.py  lora.py  misc.py  pathresolve.py
tasksync/: log.md
tests/: __init__.py  conftest.py  debug_dots.py  diff_utils.py  fixtures_piexif.py  test_bake_project.py  test_capture_civitai_compatible_lora_strengths.py  test_capture_core.py  test_capture_coverage.py  test_capture_fields_and_hashes.py  test_capture_selectors_and_pnginfo.py  test_civitai_sampler.py  test_color_module.py  test_defs_validators.py  test_efficiency_helpers.py  test_efficiency_loader_lora_stack.py  test_efficiency_lora_stack.py  test_embedding_hash_detail.py  test_embedding_sidecar_cache.py  test_embeddings.py  test_exif_batch_and_marker.py  test_ext_easyuse.py  test_ext_mjsk_loader.py  test_ext_rgthree_impact.py  test_ext_xtnodes_presets.py  test_extra_metadata.py  test_force_include_node_class.py  test_formatters_embeddings.py  test_formatters_extended.py  test_generated_user_rules.py  test_guidance_and_exif_fallback.py  test_guidance_as_cfg.py  test_hash_basename_and_skip_reasons.py  test_hash_detail_flag.py  test_hash_log_propagate.py  test_hash_logging.py  test_hash_logging_runtime.py  test_helpers.py  test_hook.py  test_issue_repro.py  (+65 more)
tests/assets/: README.txt
tests/assets/html/: test_widget.html
tests/assets/outputs/: .gitignore
tests/bench/: bench_merge_performance.py
tests/comfyui_cli_tests/: COMPLETION_SUMMARY.txt  DEV_WORKFLOW_TESTING.md  VALIDATE_METADATA_FIXES.md  VALIDATION_FIXES_SUMMARY.md  WORKFLOW_TEST_SUGGESTIONS.md  demo_output.txt  demo_validation_fixes.py  read_exif_all_folder_write_to_txt.py  run_dev_workflows.py  run_efficiency_validation.py  validate_metadata.py
tests/cookiecutter_template/: cookiecutter.json
tests/tools/: VALIDATE_METADATA_FIXES.md  VALIDATION_FIXES_SUMMARY.md  __init__.py  compare_hash_logs.bat  compare_hash_logs.py  read_exif_all_folder_write_to_txt.py  read_write_all_exif_to_txt.bat  run_dev_workflows.bat  run_dev_workflows.py  run_efficiency_validation.py  validate_metadata.bat  validate_metadata.py
web/: metadata_rule_scanner.js  show_text.js  show_text_unimeta.js  test_extension.js
(+49 files in other folders)
